--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.4.1",
     "@types/color": "^3.0.0",
     "add": "^2.0.6",
+    "azure": "^2.3.1-preview",
     "color": "^3.1.0",
     "color-name-list": "^3.52.1",
     "core-js": "^2.5.4",
+    "kuduscript": "^1.0.17",
     "nearest-color": "^0.4.2",
     "rxjs": "~6.2.0",
     "yarn": "^1.10.1",
@@ -43,6 +45,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
+    "grunt": "^1.0.3",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
