--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "npm run ng build --prod",
     "test": "npm run ng test",
     "lint": "npm run ng lint",
-    "e2e": "npm run ng e2e",
-    "postinstall": "npm run build"
+    "e2e": "npm run ng e2e"
   },
   "private": true,
   "dependencies": {
